src/core-crm/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <description>Engagement captures business information about an ‘Engagement’ QUT staff are having with a person or organisation, or a contact at a particular organisation.</description>
    <label>Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>