src/core-crm/objects/Engagement__c/fields/Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome__c</fullName>
    <description>The outcome of the Assessment stage.</description>
    <inlineHelpText>The outcome of the Assessment stage.</inlineHelpText>
    <label>Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>