src/core-crm/objects/Engagement__c/fields/Assessment_Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Outcome_Summary__c</fullName>
    <description>Assessment stage summary</description>
    <inlineHelpText>Assessment stage summary.</inlineHelpText>
    <label>Assessment Outcome Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>