src/core-crm/objects/Engagement__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>The reason the Commercialisation Engagement closed.</description>
    <inlineHelpText>The reason the Commercialisation Engagement closed.</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Executed</fullName>
            </value>
            <value>
                <fullName>No Funding Identified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>