src/core-crm/objects/Engagement__c/fields/Closed_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Comment__c</fullName>
    <description>Allows a business user to enter some comments about why the Engagement closed.</description>
    <inlineHelpText>Allows a business user to enter some comments about why the Engagement closed.</inlineHelpText>
    <label>Closed Reason Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>