src/core-crm/objects/Engagement__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>The date the Commercialisation Engagement was closed.</description>
    <inlineHelpText>The date the Commercialisation Engagement was closed.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>