src/core-crm/objects/Engagement__c/fields/Commercialisation_Ready__c.field-meta.xml
<CustomField>
    <fullName>Commercialisation_Ready__c</fullName>
    <description>Indicates the IP is ready for commercialisation.</description>
    <inlineHelpText>Indicates the IP is ready for commercialisation.</inlineHelpText>
    <label>Commercialisation Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>