src/core-crm/objects/Engagement__c/fields/Commercialisation_Ready_Summary__c.field-meta.xml
<CustomField>
    <fullName>Commercialisation_Ready_Summary__c</fullName>
    <description>Commercialisation readiness summary.</description>
    <inlineHelpText>Commercialisation readiness summary.</inlineHelpText>
    <label>Commercialisation Ready Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>