src/core-crm/objects/Engagement__c/fields/Commercialisation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Commercialisation_Strategy__c</fullName>
    <description>Indicates that Commercialisation Strategy has been completed as part of the assessment stage.</description>
    <label>Commercialisation Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>