src/core-crm/objects/Engagement__c/fields/Commercialisation_Strategy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Commercialisation_Strategy_Summary__c</fullName>
    <inlineHelpText>Commercialisation Strategy summary.</inlineHelpText>
    <label>Commercialisation Strategy Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>