src/core-crm/objects/Engagement__c/fields/Competitive_Advantage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage_Summary__c</fullName>
    <description>Competitive advantage summary</description>
    <inlineHelpText>Competitive advantage summary</inlineHelpText>
    <label>Competitive Advantage Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>