src/core-crm/objects/Engagement__c/fields/Due_Diligence_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Outcome__c</fullName>
    <description>The outcome of the due diligence phase of the business process.</description>
    <inlineHelpText>The outcome of the due diligence phase of the business process.</inlineHelpText>
    <label>Due Diligence Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>