src/core-crm/objects/Engagement__c/fields/Due_Diligence_Outcome_Summary__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Outcome_Summary__c</fullName>
    <description>Business entered supporting/additional comments about the due diligence outcome.</description>
    <inlineHelpText>Business entered supporting/additional comments about the due diligence outcome.</inlineHelpText>
    <label>Due Diligence Outcome Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>