src/core-crm/objects/Engagement__c/fields/Engagement_Code__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Code__c</fullName>
    <description>A unique, business formatted code to identify an Opportunity record in the system.</description>
    <label>Engagement Code</label>
    <type>AutoNumber</type>
</CustomField>