src/core-crm/objects/Engagement__c/fields/Engagement_Priority__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Priority__c</fullName>
    <description>The business priority for the Engagement</description>
    <label>Engagement Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>