src/core-crm/objects/Engagement__c/fields/Engagement_Source__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Source__c</fullName>
    <description>The source event/interaction that prompted the Engagement to be happen.</description>
    <label>Engagement Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Research News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>