src/core-crm/objects/Engagement__c/fields/Engagement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Summary__c</fullName>
    <description>A summary/description of the Engagement being undertaken.</description>
    <inlineHelpText>A summary/description of the Engagement being undertaken.</inlineHelpText>
    <label>Engagement Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>