src/core-crm/objects/Engagement__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Executed</fullName>
            </value>
            <value>
                <fullName>No Funding Identified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>