src/core-crm/objects/Engagement__c/fields/Inactive_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason_Comment__c</fullName>
    <description>Allows a business user to enter some comments about why the Engagement became inactive.</description>
    <inlineHelpText>Allows a business user to enter some comments about why the Engagement became inactive.</inlineHelpText>
    <label>Inactive Reason Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>