src/core-crm/objects/Engagement__c/fields/IP_Prior_Art__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art__c</fullName>
    <description>Indicates that IP Prior Art checks have been completed as part of the assessment stage.</description>
    <inlineHelpText>Indicates that IP Prior Art checks have been completed as part of the assessment stage.</inlineHelpText>
    <label>IP Prior Art</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>