src/core-crm/objects/Engagement__c/fields/IP_Prior_Art_Comment__c.field-meta.xml
<CustomField>
    <fullName>IP_Prior_Art_Comment__c</fullName>
    <description>Additional comments about the IP Prior Art.</description>
    <label>IP Prior Art Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>