src/core-crm/objects/Engagement__c/fields/Market_Research__c.field-meta.xml
<CustomField>
    <fullName>Market_Research__c</fullName>
    <description>Indicates that market research checks have been completed as part of the assessment stage</description>
    <inlineHelpText>Indicates that market research checks have been completed as part of the assessment stage.</inlineHelpText>
    <label>Market Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>