src/core-crm/objects/Engagement__c/fields/Market_Research_Comment__c.field-meta.xml
<CustomField>
    <fullName>Market_Research_Comment__c</fullName>
    <description>Additional comments about the market research.</description>
    <label>Market Research Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>