src/core-crm/objects/Engagement__c/fields/On_Hold_Comment__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Comment__c</fullName>
    <description>Allows business users to enter information about why the Engagement has been placed on hold.</description>
    <inlineHelpText>Allows business users to enter information about why the Engagement has been placed on hold.</inlineHelpText>
    <label>On Hold Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>