src/core-crm/objects/Engagement__c/fields/Risk_Identified__c.field-meta.xml
<CustomField>
    <fullName>Risk_Identified__c</fullName>
    <description>Indicates if any risks have been identified.</description>
    <inlineHelpText>Indicates if any risks have been identified.</inlineHelpText>
    <label>Risk Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>