src/core-crm/objects/Engagement__c/fields/Risk_Summary__c.field-meta.xml
<CustomField>
    <fullName>Risk_Summary__c</fullName>
    <description>Risk summary.</description>
    <label>Risk Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>