src/core-crm/objects/Engagement__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Identifies the stage in the lifecycle of the Engagement business process that the Engagement is up to/moving through.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Commercialisation Ready</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>