src/core-crm/objects/Engagement__c/fields/Technological_Limitations_Identified__c.field-meta.xml
<CustomField>
    <fullName>Technological_Limitations_Identified__c</fullName>
    <description>Indicates that checks for any technological limitations have been completed as part of the assessment stage.</description>
    <inlineHelpText>Indicates that checks for any technological limitations have been completed as part of the assessment stage.</inlineHelpText>
    <label>Technological Limitations Identified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>