src/core-crm/objects/Engagement__c/fields/Technological_Limitations_Summary__c.field-meta.xml
<CustomField>
    <fullName>Technological_Limitations_Summary__c</fullName>
    <description>Technological Limitations summary.</description>
    <inlineHelpText>Technological Limitations summary.</inlineHelpText>
    <label>Technological Limitations Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>