src/core-crm/objects/Engagement__c/fields/Technology_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Technology_Readiness__c</fullName>
    <description>Indicates that technology readiness checks have been completed as part of the assessment stage.</description>
    <inlineHelpText>Indicates that technology readiness checks have been completed as part of the assessment stage.</inlineHelpText>
    <label>Technology Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>