src/core-crm/objects/Engagement__c/fields/Technology_Readiness_Comment__c.field-meta.xml
<CustomField>
    <fullName>Technology_Readiness_Comment__c</fullName>
    <description>Additional comments about the technology readiness.</description>
    <inlineHelpText>Additional comments about the technology readiness.</inlineHelpText>
    <label>Technology Readiness Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>