src/core-crm/objects/Engagement__c/recordTypes/Commercialisation.recordType-meta.xml
<RecordType>
    <fullName>Commercialisation</fullName>
    <active>true</active>
    <description>Create Commercialisation Engagement to identify and assess research before its ready for commercialisation.</description>
    <label>Commercialisation</label>
</RecordType>