src/core-crm/objects/Engagement__c/recordTypes/Commericialisation.recordType-meta.xml
<RecordType>
    <fullName>Commericialisation</fullName>
    <active>true</active>
    <description>Create Commercialisation Engagement to identify and assess research before its ready for commercialisation.</description>
    <label>Commericialisation</label>
</RecordType>