src/core-crm/objects/Engagement__c/recordTypes/Research_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Research_Partnership</fullName>
    <active>true</active>
    <description>Create Research Partnership Engagement to identify new opportunities with industry partners to support research and research training initiatives.</description>
    <label>Research Partnership</label>
</RecordType>