src/core-crm/objects/Engagement__c/validationRules/Com_Assessment_Outcome_is_Successful.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Assessment_Outcome_is_Successful</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(Stage_Name__c, &quot;Development&quot;),
NOT(ISPICKVAL(Assessment_Outcome__c, &quot;Successful&quot;))
)</errorConditionFormula>
    <errorDisplayField>Assessment_Outcome__c</errorDisplayField>
    <errorMessage>Assessment outcome must be successful</errorMessage>
</ValidationRule>