src/core-crm/objects/Engagement__c/validationRules/Com_Commercialisation_Ready_is_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Commercialisation_Ready_is_Yes</fullName>
    <active>true</active>
    <description>Checks if the Engagement of Commercialisation record type is Commercialisation Ready when changing stage from Development to Commercialisation Ready.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(PRIORVALUE(Stage_Name__c), &quot;Development&quot;),
ISPICKVAL(Stage_Name__c, &quot;Commercialisation Ready&quot;),
NOT(ISPICKVAL(Commercialisation_Ready__c, &quot;Yes&quot;))
)</errorConditionFormula>
    <errorDisplayField>Commercialisation_Ready__c</errorDisplayField>
    <errorMessage>The engagement must be commercialisation ready.</errorMessage>
</ValidationRule>