src/core-crm/objects/Engagement__c/validationRules/Com_Commercialisation_Ready_Sum_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Commercialisation_Ready_Sum_Required</fullName>
    <active>true</active>
    <description>Checks if the Commercialisation Ready Summary field of the Engagement of Commercialisation record type is blank when changing the stage from Development to Commercialisation Ready.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(Stage_Name__c, &quot;Commercialisation Ready&quot;),
ISBLANK(Commercialisation_Ready_Summary__c)
)</errorConditionFormula>
    <errorDisplayField>Commercialisation_Ready_Summary__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>