src/core-crm/objects/Engagement__c/validationRules/Com_Disclosure_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Disclosure_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL( PRIORVALUE(Stage_Name__c) ,&quot;Disclosure&quot;),
NOT(ISPICKVAL(Stage_Name__c, &quot;Evaluation&quot;)),
NOT(ISPICKVAL(Stage_Name__c,&quot;On Hold&quot;)),
NOT(ISPICKVAL(Stage_Name__c,&quot;Closed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Stage_Name__c</errorDisplayField>
    <errorMessage>You can only progress to the next stage or move the engagement to On Hold or Closed.</errorMessage>
</ValidationRule>