src/core-crm/objects/Engagement__c/validationRules/Com_Due_Diligence_Outcome_is_Successful.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Due_Diligence_Outcome_is_Successful</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(Stage_Name__c, &quot;Development&quot;),
NOT(ISPICKVAL(Due_Diligence_Outcome__c, &quot;Successful&quot;))
)</errorConditionFormula>
    <errorDisplayField>Due_Diligence_Outcome__c</errorDisplayField>
    <errorMessage>Due diligence outcome must be successful</errorMessage>
</ValidationRule>