src/core-crm/objects/Engagement__c/validationRules/Com_Engagement_Priority_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Engagement_Priority_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(Stage_Name__c, &quot;Evaluation&quot;),
ISPICKVAL(Engagement_Priority__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Engagement_Priority__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>