src/core-crm/objects/Engagement__c/validationRules/Com_Engagement_Summary_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Engagement_Summary_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL(Stage_Name__c, &quot;Evaluation&quot;),
ISBLANK(Engagement_Summary__c)
)</errorConditionFormula>
    <errorDisplayField>Engagement_Summary__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>