src/core-crm/objects/Engagement__c/validationRules/Com_Evaluation_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Evaluation_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(Stage_Name__c),
ISPICKVAL( PRIORVALUE(Stage_Name__c) ,&quot;Evaluation&quot;),
NOT(ISPICKVAL(Stage_Name__c, &quot;Development&quot;)),
NOT(ISPICKVAL(Stage_Name__c,&quot;On Hold&quot;)),
NOT(ISPICKVAL(Stage_Name__c,&quot;Closed&quot;))
)</errorConditionFormula>
    <errorDisplayField>Stage_Name__c</errorDisplayField>
    <errorMessage>You can only progress to the next stage, which is, Development or choose to put the engagement on hold or closed.</errorMessage>
</ValidationRule>