src/core-crm/objects/Engagement__c/validationRules/Com_On_Hold_Comment_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_On_Hold_Comment_is_Required</fullName>
    <active>true</active>
    <description>Ensures that On Hold Comment is populated when stage is moved to On Hold where record type is Commercialisation</description>
    <errorConditionFormula>AND (
     RecordType.DeveloperName =&quot;Commercialisation&quot;,
     ISPICKVAL(Stage_Name__c , &quot;On Hold&quot;),
     ISBLANK( On_Hold_Comment__c )
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Comment__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>