src/core-crm/objects/Engagement__c/validationRules/Engagement_Summary_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Summary_is_Required</fullName>
    <active>true</active>
    <description>Validation Rule to set the Engagement Summary as Required.</description>
    <errorConditionFormula>ISBLANK(Engagement_Summary__c)</errorConditionFormula>
    <errorDisplayField>Engagement_Summary__c</errorDisplayField>
    <errorMessage>Please populate Engagement Summary.</errorMessage>
</ValidationRule>