src/core-crm/objects/Engagement__c/validationRules/RP_Inactive_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RP_Inactive_Reason_is_Required</fullName>
    <active>true</active>
    <description>Checks if Inactive Reason field has a value when stage is move to ‘Inactive’ during any stage of the engagement where record type is Research Partnership</description>
    <errorConditionFormula>AND (
    RecordType.DeveloperName =&quot;Research_Partnership&quot;,
    ISCHANGED(Stage_Name__c),
    ISPICKVAL(Stage_Name__c, &quot;Inactive&quot;),
    ISBLANK(TEXT( Inactive_Reason__c ))
)</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>