src/core-crm/objects/Engagement__c/validationRules/RP_On_Hold_Comment_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RP_On_Hold_Comment_is_Required</fullName>
    <active>true</active>
    <description>Ensures that On Hold Comment is populated when stage is moved to On Hold where record type is Research Partnership</description>
    <errorConditionFormula>AND (
    RecordType.DeveloperName =&quot;Research_Partnership&quot;,
    ISPICKVAL(Stage_Name__c, &quot;On Hold&quot;),
    ISBLANK( On_Hold_Comment__c  )
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Comment__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>