src/core-crm/objects/Engagement__c/listViews/All_Engagements.listView-meta.xml
<ListView>
    <fullName>All_Engagements</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement__c.Commercialisation,Engagement__c.Research_Partnership</value>
    </filters>
    <label>All Engagements</label>
    <sharedTo>
        <group>Commercialisation_Operations_Manager</group>
        <group>Commercialisation_Partnership_Manager</group>
        <group>Research_Operations_Manager</group>
        <group>Research_Partnership_Manager</group>
    </sharedTo>
</ListView>