src/core-crm/objects/Engagement__c/listViews/Commercialisation_Engagement.listView-meta.xml
<ListView>
    <fullName>Commercialisation_Engagement</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement__c.Commercialisation</value>
    </filters>
    <label>Commercialisation Engagement</label>
    <sharedTo>
        <group>Commercialisation_Operations_Manager</group>
        <group>Commercialisation_Partnership_Manager</group>
    </sharedTo>
</ListView>